DEP-5321 Fixed spacing issues on reload and adding more consistent spacing (#210)
* DEP-5321 Added consistent spacing between messages.

* DEP-5321 Tweaked values to make spacing more consistent.

--- a/app/assets/stylesheets/chat-ui-common.scss
+++ b/app/assets/stylesheets/chat-ui-common.scss
@@ -112,6 +112,13 @@ $footer-top-border-height: 3px;
             outline: none;
         }
 
+    .ciapi-customer-container {
+        padding-bottom: 94px;
+    }
+    .ciapi-agent-container {
+        padding-bottom: 30px;
+    }
+
     .skipToTopWithScroll {
         position: relative;
         bottom: 0;
@@ -174,9 +181,6 @@ $footer-top-border-height: 3px;
     }
     .print-only {
         display: block;
-    }
-    .ciapi-agent-container {
-        padding-left: 0px;
     }
     .ciapi-customer-container {
         padding-right: 0px;
